<resources>
    <string name="app_name">Yamba-Gr5</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="status_button_tweet">Tweet</string>
    <string name="status_text_hint">What\'s happening?</string>
    <string name="tweet">Tweet</string>
    <string name="username">User name</string>
    <string name="username_summary">What\'s your user name?</string>
    <string name="password">Password</string>
    <string name="password_summary">How do you log in?</string>
    <string name="status_update">Status Update</string>
    <string name="one_hundred_forty">140</string>
    <string name="interval">Refresh Interval</string>
    <string name="interval_summary">How frequently should data refresh?</string>
    <string name="title_activity_main">Sergir App</string>
    <string name="refresh">Refresh</string>

</resources>
