<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Archivo de configuración XML que sirve para crear la vista
     settings en la aplicación, despliega los recursos necesarios. -->
    <EditTextPreference
        android:key="username"
        android:summary="@string/username_summary"
        android:title="@string/username" />

    <EditTextPreference
        android:inputType="textPassword"
        android:key="password"
        android:summary="@string/password_summary"
        android:title="@string/password" />

    <ListPreference
        android:entries="@array/interval_names"
        android:entryValues="@array/interval_values"
        android:key="interval"
        android:summary="@string/interval_summary"
        android:title="@string/interval" />

</PreferenceScreen>